[package]
name = "aia"
version = "0.1.0"
edition = "2024"
authors = ["Anton Aparin <anton@antonaparin.com>"]

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
async-openai = { version = "0.28.0", features = ["realtime"] }
atty = "0.2.14"
cliclack = "0.3.5"
dirs = "6.0.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
toml = "0.8.20"
